<resources>
    <string name="app_name">HelpMeow</string>

    <string name="dev">Develop by</string>

    <string name="title_menu_1">Seeker</string>
    <string name="title_menu_2">Gifter</string>
    <string name="title_menu_3">Watcher</string>
    <string name="title_menu_4">What are you?</string>
    <string name="desc_menu_1">As a Seeker, your goal is to find the perfect feline companion, providing them with a loving forever home filled with care and affection.</string>
    <string name="desc_menu_2">As a Gifter, you bring hope and joy to rescue cats, offering them a second chance at life filled with gratitude and contentment.</string>
    <string name="desc_menu_3">As a Watcher, you are a guardian and observer in the cat community, capturing extraordinary moments that immortalize the triumphs and bonds between humans and cats.</string>
    <string name="desc_menu_4"></string>
    <string name="started">Get started</string>

    <string name="title_login_page">Welcome!</string>
    <string name="message_login_page">Please log in to your account</string>
    <string name="text_login">Don\'t have an account yet?</string>
    <string name="title_regis_page">Welcome!</string>
    <string name="message_regis_page">Create an account to get started</string>
    <string name="text_register">Already have an account?</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="title_home">Home</string>
    <string name="title_info">Cat Wiki</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_maps">Maps</string>

    <string name="permission">Didn\'t get permission</string>
    <string name="input_image">Please input your image</string>

    <string name="preview">Preview</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="role">Role</string>
    <string name="breed">Breed</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="start_point">Start Point</string>

    <string name="upload">Upload</string>

    <string name="search">Search</string>

    <string name="profile">Profile Data</string>
    <string name="account">Account</string>
    <string name="payment">Payment</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">Post</string>

    <string name="error_getting_user_id_token">Error user id</string>
    <string name="username">Username</string>
    <string name="cat_name">Cat Name</string>
    <string name="title_predict">Predict</string>
    <string name="title_favorite">Favorite</string>
    <string name="persentase">Persentase</string>
    <string name="nan">NaN</string>
    <string name="unknown">Unknown</string>
    <string name="textResult">Result</string>
    <string name="your_result">Your Result :</string>
    <string name="check_now">Check Now</string>
    <string name="title_lens">Scan</string>
    <string name="switchcamera">Switch Camera</string>
    <string name="capture">Capture</string>
</resources>