<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />

    <item
        android:id="@+id/navigation_predict"
        android:icon="@drawable/ic_predict"
        android:title="@string/title_predict"
        android:onClick="onLens"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_3"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>