<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_bottom"
    app:startDestination="@+id/navigation_info">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shai.helpmeow.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.shai.helpmeow.ui.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_predict"
        android:name="com.shai.helpmeow.ui.PredictFragment"
        android:label="@string/title_predict"
        tools:layout="@layout/fragment_predict" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.shai.helpmeow.ui.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.shai.helpmeow.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>